--- a/contributions.html
+++ b/contributions.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contribute to YouTube Subtitles Extension</title>
-    <style>
-        body { font-family: sans-serif; line-height: 1.6; margin: 2em; }
-        h1 { color: #333; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Contribute to the Project</h1>
-    <p>Thank you for considering contributing to the YouTube Subtitles extension!</p>
-    <p>At the moment, we are not set up to accept monetary contributions, but you can contribute by reporting bugs or suggesting new features on our <a href="YOUR_GITHUB_ISSUES_URL_HERE">GitHub Issues page</a>.</p>
+    <div class="container">
+        <h1>Contribute to the Project</h1>
+        <p>Thank you for considering contributing to the YouTube Subtitles extension!</p>
+        <p>At the moment, we are not set up to accept monetary contributions, but you can contribute by reporting bugs or suggesting new features on our <a href="YOUR_GITHUB_ISSUES_URL_HERE">GitHub Issues page</a>.</p>
+        <div class="footer">
+            <p>&copy; 2025 BenDev. All rights reserved.</p>
+        </div>
+    </div>
 </body>
 </html>
