--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Subtitles Extension</title>
-    <style>
-        body { font-family: sans-serif; line-height: 1.6; margin: 2em; }
-        h1 { color: #333; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>YouTube Subtitles Extension</h1>
-    <p>Welcome to the official page for the YouTube Subtitles extension.</p>
-    <p>This extension automatically fetches and displays YouTube subtitles for easier viewing.</p>
-    
-    <h2>Features</h2>
-    <ul>
-        <li>Easy access to subtitles.</li>
-        <li>Simple and clean interface.</li>
-    </ul>
+    <div class="container">
+        <h1>YouTube Subtitles Extension</h1>
+        <p>Welcome to the official page for the YouTube Subtitles extension.</p>
+        <p>This extension automatically fetches and displays YouTube subtitles for easier viewing.</p>
+        
+        <h2>Features</h2>
+        <ul>
+            <li>Easy access to subtitles.</li>
+            <li>Simple and clean interface.</li>
+        </ul>
 
-    <p>You can find the extension on the <a href="YOUR_ADDON_STORE_URL_HERE">Firefox Add-on Store</a>.</p>
+        <p>You can find the extension on the <a href="YOUR_ADDON_STORE_URL_HERE">Firefox Add-on Store</a>.</p>
+
+        <div class="footer">
+            <p>&copy; 2025 Your Name or Company. All rights reserved.</p>
+        </div>
+    </div>
 </body>
 </html>
