--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
         <ul>
             <li>Easy access to subtitles.</li>
             <li>Simple and clean interface.</li>
+            <li>Caption search</li>
         </ul>
 
         <p>You can find the extension on the <a href="YOUR_ADDON_STORE_URL_HERE">Firefox Add-on Store</a>.</p>
+        <p>If you want to contribute feel free to visit <a href="./contributions.html">Contribute Page</a>.</p>
+
 
         <div class="footer">
             <p>&copy; 2025 Your Name or Company. All rights reserved.</p>
